<resources>
    <string name="locale_code">en-US</string>
    <string name="app_name">Kcanotify</string>
    <string name="app_brand" translatable="false" traslatable="false">시제 깡들리티</string>
    <string name="app_version" translatable="false">2.8_2.2.4</string>
    <string name="action_settings">Settings</string>
    <string name="action_errorlog">Error Log</string>
    <string name="action_download">Download</string>
    <string name="action_check">CHECK</string>
    <string name="action_server">CHANGE SERVER</string>
    <string name="action_downloadall">DL ALL</string>
    <string name="action_inspector" translatable="false">Inspector</string>
    <string name="app_vpn_name">Kcanotify Sniffer</string>
    <string name="app_name_kancolle">KanColle Android (Official)</string>
    <string name="app_name_gotobrowser">GotoBrowser</string>
    <string name="backpress_msg">Press back one more time to exit</string>
    <string name="notification_appinfo_title">Kcanotify Notification</string>
    <string name="developer_email" translatable="false">kcanotify@gmail.com</string>
    <string name="default_gamedata_version" translatable="false">4.5.6.0</string>
    <string name="app_download_link_playstore_label" translatable="false">Google Play Store</string>
    <string name="app_download_link_googledrive_label" translatable="false">Google Drive</string>
    <string name="app_download_link_mega_label" translatable="false">MEGA</string>
    <string name="app_download_link_baidu_label" translatable="false">百度云 (密码: c2in)</string>
    <string name="app_download_link_kcwiki_label" translatable="false">kcwiki mirror</string>
    <string name="app_download_link_googledrive" translatable="false">http://bit.ly/kcanotifydown</string>
    <string name="app_download_link_mega" translatable="false">https://mega.nz/#F!0FtUTBoB!cSUJtRA76C4KBcrnc2-xdw</string>
    <string name="app_download_link_playstore" translatable="false">market://details?id=com.antest1.kcanotify</string>
    <string name="app_download_link_baidu" translatable="false">http://pan.baidu.com/s/1i5f37Rv</string>
    <string name="app_download_link_kcwiki" translatable="false">https://mirrors.kcwiki.org/kcanotify/</string>
    <string name="app_kcaqsync_link" translatable="false">http://kcaqsync.swaytwig.com</string>
    <string name="server_swaytwig" translatable="false">http://swaytwig.com/</string>
    <string name="server_nova" translatable="false">https://nh7l0ukr44.execute-api.us-east-1.amazonaws.com/</string>
    <string name="server_liza" translatable="false">http://18.176.189.52/</string>
    <string name="kcanotify_checkversion_link" translatable="false" formatted="false">kcanotify/v.php</string>
    <string name="api_start2_recent_version_link" translatable="false" formatted="false">kcanotify/kca_api_start2.php?v=recent</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="error_text">An error occurred. Please contact the developer.</string>
    <string name="questview_prev" translatable="false">PREV</string>
    <string name="questview_next" translatable="false">NEXT</string>
    <string name="heavy_damaged">A ship is heavily damaged!</string>
    <string name="heavy_damaged_damecon">A ship is heavily damaged! (Damecon available)</string>
    <string name="goback_left">Press LEFT button to escort the ship.</string>
    <string name="seek_type_0">Sum</string>
    <string name="seek_type_1">F33/1</string>
    <string name="seek_type_2">F33/2</string>
    <string name="seek_type_3">F33/3</string>
    <string name="seek_type_4">F33/4</string>
    <string name="seek_type_0_detail">Total Sum</string>
    <string name="seek_type_1_detail">Formula 33/Cn=1 (2&#45;5)</string>
    <string name="seek_type_2_detail">Formula 33/Cn=2 (5&#45;2,5&#45;4)</string>
    <string name="seek_type_3_detail">Formula 33/Cn=3 (6&#45;2,6&#45;3)</string>
    <string name="default_locale" translatable="false">default-LOCALE</string>
    <string name="setting_menu_kand_head">Kcanotify Settings</string>
    <string name="setting_menu_kand_title_language">Language Settings</string>
    <string name="setting_menu_kand_title_saku_cal">Select LoS formula</string>
    <string name="setting_menu_kand_title_sniffer_type">Sniffer Mode</string>
    <string name="setting_menu_kand_title_exp_realtime_show">Track Expedition Time</string>
    <string name="setting_menu_kand_desc_exp_realtime_show">Display remaining/left time for Expeditions on the navbar</string>
    <string name="setting_menu_kand_title_exp_type">Expedition Time View Type</string>
    <string name="setting_menu_kand_title_set_noti_priority">Set Notification Priority to HIGH</string>
    <string name="setting_menu_kand_desc_set_noti_priority">When checked, the navbar will always be the top of notifications</string>
    <string name="setting_menu_kand_title_game_data_down">Data/Resource Update Check</string>
    <string name="setting_menu_kand_desc_game_data_down">Use if game data was not loaded automatically.</string>
    <string name="setting_menu_kand_title_fairy_select">Select fairy</string>
    <string name="setting_menu_kand_desc_fairy_select">Select fairy to bring with</string>
    <string name="setting_menu_kand_title_fairy_auto_hide">Show Fairy only in Kancolle Screen</string>
    <string name="setting_menu_kand_desc_fairy_auto_hide">There is a delay in showing/hiding fairy.</string>
    <string name="setting_menu_kand_title_adv_network">Advanced Network Settings</string>
    <string name="setting_menu_kand_title_record_droplog">Record Drop Log</string>
    <string name="setting_menu_kand_title_record_resourcelog">Record Resource Log</string>
    <string name="setting_menu_kand_title_fleetview_button_order">FleetView Menu Order</string>
    <string name="setting_menu_kand_desc_fleetview_button_order">Set button order in the right side</string>
    <string name="record_storage_warning">Takes up some of device\'s storage space.</string>
    <string name="setting_menu_view_head">Permission/Function Settings</string>
    <string name="setting_menu_view_title_overlay_setting">Screen Overlay Settings</string>
    <string name="setting_menu_view_desc_overlay_setting">Set Screen Overlay Permission (required for BattleView).</string>
    <string name="setting_menu_view_title_battlenode_use">Use Node Prediction</string>
    <string name="setting_menu_view_desc_battlenode_use">Display next node info during sortie with toast.</string>
    <string name="setting_menu_view_title_battleview_use">Use BattleView</string>
    <string name="setting_menu_view_desc_battleview_use">Display battle results during sortie.</string>
    <string name="setting_menu_view_title_drop_visible">Show Drop Info</string>
    <string name="setting_menu_view_desc_drop_visible">Show dropped ship name in BattleView</string>
    <string name="setting_menu_view_title_show_constrship">Show Name of Ship in Construction</string>
    <string name="setting_menu_view_desc_show_constrship">Display the name of the ship in construction by FleetView.</string>
    <string name="setting_menu_view_title_fix_view">FleetView/BattleView Drag Lock</string>
    <string name="setting_menu_view_desc_fix_view">Fix the vertical position of view to current position</string>
    <string name="setting_menu_noti_head">Notification Settings</string>
    <string name="setting_menu_noti_title_alarm_delay">Timer Allowance (sec)</string>
    <string name="setting_menu_noti_title_exp">Expedition</string>
    <string name="setting_menu_noti_desc_exp">Screen notification on expedition arrival.</string>
    <string name="setting_menu_noti_title_dock">Docking</string>
    <string name="setting_menu_noti_desc_dock">Screen notification when docking completes.</string>
    <string name="setting_menu_noti_title_morale">Morale</string>
    <string name="setting_menu_noti_desc_morale">Screen notification when a fleet recovers the morale minimum.</string>
    <string name="setting_menu_noti_title_morale_min">Morale Minimum</string>
    <string name="setting_menu_noti_title_akashirepair">Anchorage Repair (Akashi Repair Timer)</string>
    <string name="setting_menu_noti_desc_akashirepair">Screen notification when anchorage repair begins.</string>
    <string name="setting_menu_noti_title_hdmg_vib">Heavy Damage Alert</string>
    <string name="setting_menu_noti_desc_hdmg_vib">Sound/Vibrate when a ship is heavily damaged (Toast will always appear).</string>
    <string name="setting_menu_noti_title_nspl_vib">Incomplete Supply Alert</string>
    <string name="setting_menu_noti_desc_nspl_vib">Sound/Vibrate when incompletely supplied fleet exist (Toast will always appear).</string>
    <string name="setting_menu_noti_title_fairy_vib">Vibrate when hide the fairy</string>
    <string name="setting_menu_noti_desc_fairy_vib">Vibrate when hide the fairy by long-touch.</string>
    <string name="setting_menu_noti_title_fairy_glow">Alert quest completion via fairy</string>
    <string name="setting_menu_noti_desc_fairy_glow">Fairy will shine brightly when tracked quest is completed</string>
    <string name="setting_menu_noti_title_disable_customtoast">Use Custom Toast Service</string>
    <string name="setting_menu_noti_desc_disable_customtoast">Try to enable this when node prediction/heavy damage alert does not appear.</string>
    <string name="setting_menu_stat_head">Plugin Settings</string>
    <string name="setting_menu_stat_title_kcaqsync">Use KcaQSync (Quest Sync)</string>
    <string name="setting_menu_stat_desc_kcaqsync" translatable="false">http://kcaqsync.swaytwig.com/</string>
    <string name="setting_menu_stat_title_kcaqsync_pass">KcaQSync password</string>
    <string name="setting_menu_stat_desc_kcaqsync_pass">WARNING: Never enter your real password used in DMM!</string>
    <string name="setting_menu_stat_title_opendb">Send game statistics to OpenDB</string>
    <string name="setting_menu_stat_desc_opendb" translatable="false">http://opendb.swaytwig.com/</string>
    <string name="setting_menu_stat_title_poidb">Send game statistics to poi-statistics</string>
    <string name="setting_menu_stat_desc_poidb" translatable="false">https://db.kcwiki.org/</string>
    <string name="setting_menu_app_head">Application Information</string>
    <string name="setting_menu_app_title_current">Current Version</string>
    <string name="setting_menu_app_title_updatecheckserver">Select Update Check Server</string>
    <string name="setting_menu_app_title_updatecheck">Check For Updates</string>
    <string name="setting_menu_app_title_down">APK Download Site</string>
    <string name="setting_menu_app_title_contact">Submit a Suggestion or Error Report</string>
    <string name="setting_menu_app_desc_updatecheck" translatable="false">https://github.com/antest1/kcanotify/releases</string>
    <string name="setting_menu_app_desc_contact">Send an E-mail to the developer</string>
    <string name="setting_menu_app_desc_inspector">データベース/設定値を表示/初期化</string>
    <string name="setting_menu_app_info">About kcanotify</string>
    <string name="setting_menu_noti_title_ringtone">Ringtones</string>
    <string name="setting_menu_noti_desc_ringtone">Choose a ringtone</string>
    <string name="setting_menu_noti_title_kind">Sound mode</string>
    <string name="sound_kind_value_vibrate" translatable="false">vibrate</string>
    <string name="setting_menu_noti_title_notiatsvcoff">Enable notification when service is off</string>
    <string name="setting_menu_noti_desc_notiatsvcoff">Make expedition/docking notification available even if service is off</string>
    <string name="hardware_accelerated_summary">出现画面花屏时可尝试关闭</string>
    <string name="hardware_accelerated_title">开启硬件加速</string>
    <string name="game_page_type_title">设定游戏页面</string>
    <string name="clear_cookie_start_summary">OOI模式时，如果电脑登录过，则需要清除Cookie才能启动游戏，否则会201猫</string>
    <string name="clear_cookie_start_title">清除Cookie启动游戏</string>
</resources>